<!--    Copyright 2021,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->

<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition help </string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="non_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="icon_hazardous_content_description">Potentially hazardous asteroid icon</string>
    <string name="icon_non_hazardous_content_description">Not hazardous asteroid icon</string>
    <string name="no_internet_text">We couldn\'t load your feed.
       \n Check your internet connectivity and try again.</string>
    <string name="try_again_button_label">try again</string>
</resources>
