<?xml version="1.0" encoding="utf-8"?>
<!--    Copyright 2021,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="com.example.android.asteroidsradar.domain.Asteroid" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/activity_main_image_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/asteroid_safe" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data_title"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_tiny"
                        android:text="@{asteroid.closeApproachDate}"
                        android:textColor="@color/default_text_color"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/absolute_magnitude_title"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/default_text_color" />

                        <TextView
                            android:id="@+id/absolute_magnitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_tiny"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            android:textColor="@color/default_text_color"
                            app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/spacing_medium"
                        app:srcCompat="@drawable/ic_help_circle"
                        android:contentDescription="@string/astronomical_unit_explanation_button"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/estimated_diameter_title"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/estimated_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:textColor="@color/default_text_color"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:kmUnitText="@{asteroid.estimatedDiameter}"
                    tools:text="0.82 km" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@string/relative_velocity_title"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/relative_velocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:textColor="@color/default_text_color"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:velocityText="@{asteroid.relativeVelocity}"
                    tools:text="11.9 km/s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@string/distance_from_earth_title"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/distance_from_earth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:textColor="@color/default_text_color"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                    tools:text="0.0924 au" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>