<?xml version="1.0" encoding="utf-8"?>
<!--    Copyright 2021,  Gergana Kirilova-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.asteroidsradar.main.MainViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSecondary">

        <TextView
            android:id="@+id/no_internet_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_internet_text"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/try_again_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
             />

        <Button
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/default_text_color"
            android:text="@string/try_again_button_label"
            android:textColor="@color/app_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"

            android:contentDescription="@string/try_again_button_label"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{() -> viewModel.getAsteroidsAndImageData()}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nested_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <FrameLayout
                android:id="@+id/activity_main_image_of_the_day_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_of_the_day_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/activity_main_image_of_the_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:imageOfTheDay="@{viewModel.imageOfTheDay.url}"
                    app:showPlaceholder="@{viewModel.imageOfTheDay}"
                    app:imageOfTheDayContentDescription="@{viewModel.imageOfTheDay.title}"/>

                <TextView
                    android:id="@+id/image_of_the_day_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/image_of_the_day_background"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/image_of_the_day"
                    android:textColor="?colorOnSecondary"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:hideViewIfNoImageToShow="@{viewModel.imageOfTheDay}"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/image_placeholder_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/activity_main_image_of_the_day_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder_picture_of_day" />
                </com.facebook.shimmer.ShimmerFrameLayout>
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/asteroid_recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day_layout"
                app:layout_constraintVertical_bias="0.0"
                app:showAsteroids="@{viewModel.asteroidResult}" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/asteroids_placeholder_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/list_item_place_holder_shimmer" />

                    <include layout="@layout/list_item_place_holder_shimmer" />

                    <include layout="@layout/list_item_place_holder_shimmer" />

                    <include layout="@layout/list_item_place_holder_shimmer" />

                    <include layout="@layout/list_item_place_holder_shimmer" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>







</layout>
